<resources>
    <string name="app_name">Student Scheduler</string>
    <string name="action_settings">Settings</string>
    <string name="create_sample_data">Create Sample Data</string>
    <string name="delete_all_notes">Delete All Notes</string>
    <string name="all_deleted">\"All resources deleted.\"</string>
    <string name="are_you_sure">\"Are you sure?\"</string>
    <string name="name">Name</string>
    <string name="term_updated">Term updated</string>
    <string name="action_delete">Delete</string>
    <string name="term_deleted">Term deleted</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="student_scheduler">Student Scheduler</string>
    <string name="terms">Terms</string>
    <string name="new_term">New Term</string>
    <string name="term_title">Term Title:</string>
    <string name="end_date">End Date:</string>
    <string name="start_date">Start Date:</string>
    <string name="term_start">Term Start:</string>
    <string name="term_end">Term End:</string>
    <string name="course_title">Course Title:</string>
    <string name="course_start">Course Start:</string>
    <string name="course_end">Course End</string>
    <string name="course_status">Course Status:</string>
    <string name="hyphen">  -  </string>
    <string name="course_updated">Course updated</string>
    <string name="course_deleted">Course deleted</string>
    <string name="date_hint">Click here to add date</string>
    <string name="course_mentors">Course Mentors</string>
    <string name="assessments">Assessments</string>
    <string name="course_notes">Course Notes</string>
    <string name="course_notes_hint">Add notes for this course here.</string>
    <string name="course_alerts">Course Alerts:</string>
    <string name="start_alert">Start Alert:</string>
    <string name="end_alert">End Alert:</string>
    <string name="share_notes">Share Notes</string>
    <string name="add_note">Add Note</string>
    <string name="term">Term:</string>
    <string name="course_in_term">Courses in Term:</string>
    <string name="add_course_to_term">Add Course to Term</string>
    <string name="edit_course">Edit Course</string>
    <string name="edit_term">Edit Term</string>
    <string name="assessment_title">Assessment Title:</string>
    <string name="course_end_date">Course End Date:</string>
    <string name="assessment_alerts">Assessment Alerts:</string>
    <string name="assessment_notes">Assessment Notes:</string>
    <string name="assessment_notes_hint">Enter Assessment notes here</string>
    <string name="courses">Courses</string>
    <string name="delete_all_data">Delete All Data</string>
    <string name="assessment_deleted">Assessment Deleted</string>
    <string name="assessment_updated">Assessment Updated</string>
    <string name="assessment_due_date">Assessment Due Date:</string>
    <string name="assessment_alert">Assessment Alert:</string>
    <string name="time_hint">Click here to add time</string>
    <string name="assessment_term">Assessment Term</string>
    <string name="course">Course:</string>
    <string name="note_title">Note Title:</string>
    <string name="note_text">Note Text:</string>
    <string name="assessment_note_deleted">Assessment Note Deleted.</string>
    <string name="assessment_note_updated">Assessment Note Updated.</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="mentor_name">Mentor Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="mentor_updated">Updated mentor</string>
    <string name="mentor_deleted">Deleted mentor</string>
    <string name="edit_mentor">Edit Mentor</string>
    <string name="edit_course_note">Edit Course Note</string>
    <string name="course_note_updated">Course Note Updated</string>
    <string name="course_note_deleted">Course Note Deleted</string>
    <string name="alert_title">Alert Title:</string>
    <string name="alert_time">Alert Time:</string>
    <string name="assessment_alert_deleted">Assessment Alert Deleted</string>
    <string name="assessment_alert_updated">Assessment Alert Updated</string>
    <string name="edit_assessment_alert">Edit Assessment Alert</string>
    <string name="photo_deleted">Photo Deleted</string>
    <string name="photo_updated">Photo Updated</string>
    <string name="selected_photo">Selected Photo</string>
    <string name="assessment_note_photos">Assessment Note Photos</string>
    <string name="photo">Photo</string>
    <string name="take_new_photo">Take new photo</string>
    <string name="add_assessment_note">Add Assessment Note</string>
    <string name="course_note_photos">Course Note Photos:</string>
    <string name="course_note_photos1">Course Note Photos</string>
    <string name="share_note_amp_photos"><![CDATA[Share Note & Photos]]></string>
    <string name="share_note">Share Note</string>
    <string name="deleted_term">Term Deleted</string>
    <string name="cannot_delete_term">Cannot delete terms with courses.</string>
    <string name="alert_date">Alert Date:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="title">Title:</string>
    <string name="new_assessment_alert">New Assessment Alert</string>
    <string name="assessment_editor">Assessment Editor</string>
    <string name="edit_assessment_note">Edit Assessment Note</string>
    <string name="disabled_notification">Disabled Notification</string>
    <string name="scheduled_notification">Scheduled notification for</string>
    <string name="cancel_changes">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="assessment_type">Assessment Type:</string>
    <string name="no_terms">Please create a term first.</string>
    <string name="no_courses">Please create a course first.</string>
    <string name="save_term_first">Please save term before adding courses to a new term.</string>
    <string name="save_course_first">Please save new course first.</string>
    <string name="save_note_first">Please save note first.</string>
    <string name="save_assessment_first">Please save assessment first.</string>
    <string name="time_and_date_necessary">Time and date must be filled out first.</string>
    <string name="title_cannot_be_blank">The title cannot be blank.</string>
    <string name="start_date_required">A start date is required.</string>
    <string name="end_date_required">An end date is required.</string>
    <string name="course_inserted">New course created.</string>
    <string name="mentor_name_blank">Mentor name cannot be blank.</string>
    <string name="note_title_blank">Note title cannot be blank.</string>
    <string name="alert_title_blank">Alert title cannot be blank.</string>
    <string name="alert_time_blank">Alert time cannot be blank.</string>
    <string name="alert_date_blank">Alert date cannot be blank.</string>
    <string name="target_date_required">A taget end date is required.</string>
    <string name="deleted_alert">Deleted Alert.</string>
    <string name="course_note_created">Course Note Created</string>
    <string name="note_text_blank">Note text cannot be blank.</string>
</resources>
