<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.meagerfindings.matgreten.student_scheduler.com.meagerfindings.matgreten.student_scheduler.AssessmentAlertEditorActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/alertTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:onClick="setAssessmentAlertTime"
        app:layout_constraintTop_toBottomOf="@+id/assessmentAlertDateLabel"
        app:layout_constraintRight_toRightOf="@+id/assessmentAlertDateLabel"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="-1dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/editAssessmentAlertTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/time_hint"
        android:onClick="setAssessmentAlertTime"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/alertTimeLabel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/alertTimeLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alertTimeLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/assessmentAlertTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/assessmentAlertDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/date"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:onClick="setAssessmentAlertDate"
        app:layout_constraintTop_toBottomOf="@+id/assessmentAlertTitleLabel"
        app:layout_constraintRight_toRightOf="@+id/assessmentAlertTitleLabel"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="0dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editAssessmentAlertTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/new_assessment_alert"
        android:inputType="textAutoComplete"
        app:layout_constraintBottom_toBottomOf="@+id/assessmentAlertTitleLabel"
        app:layout_constraintLeft_toRightOf="@+id/assessmentAlertTitleLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/assessmentAlertTitleLabel" />

    <TextView
        android:id="@+id/editAssessmentAlertDateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/date_hint"
        android:onClick="setAssessmentAlertDate"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/assessmentAlertDateLabel"
        app:layout_constraintLeft_toRightOf="@+id/assessmentAlertDateLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/assessmentAlertDateLabel" />

</android.support.constraint.ConstraintLayout>
