<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvAssessmentAlertTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1.70"
        android:text="@string/alert_title"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAssessmentAlertTime"
        android:layout_width="88dp"
        android:layout_height="20dp"
        android:layout_weight="1.70"
        android:text="@string/alert_time"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toRightOf="@+id/tvAssessmentAlertDate"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAssessmentAlertTitle" />

    <TextView
        android:id="@+id/tvAssessmentAlertDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.70"
        android:text="@string/alert_date"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"
        android:textStyle="italic"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAssessmentAlertTitle" />
</android.support.constraint.ConstraintLayout>