<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.meagerfindings.matgreten.c196_student_scheduler_mat_greten.CourseNoteEditorActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">



    <TextView
        android:id="@+id/editCourseNoteTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/note_title"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editCourseNoteTitleValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textAutoComplete"
        app:layout_constraintLeft_toRightOf="@+id/editCourseNoteTitleLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editCourseNoteTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/note_text"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCourseNoteTitleLabel" />

    <EditText
        android:id="@+id/editCourseNoteTextValue"
        android:layout_width="364dp"
        android:layout_height="138dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textLongMessage"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCourseNoteTextLabel" />

    <TextView
        android:id="@+id/coursePhotosLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/course_note_photos"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareNoteTextButton"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <include
        android:id="@+id/include_course_note_photos"
        layout="@layout/activity_course_photo_screen"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coursePhotosLabel"
        tools:layout_editor_absoluteY="287dp" />

    <Button
        android:id="@+id/shareNoteTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="shareNoteText"
        android:text="@string/share_note"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCourseNoteTextValue"
        app:layout_constraintRight_toLeftOf="@+id/shareNoteAllButton" />

    <Button
        android:id="@+id/shareNoteAllButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="checkStorageWritePermission"
        android:text="@string/share_note_amp_photos"
        app:layout_constraintLeft_toRightOf="@+id/shareNoteTextButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCourseNoteTextValue" />

</android.support.constraint.ConstraintLayout>